supertuxkart/manifests/server/networkpolicy.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: supertuxkart-server
  labels:
    app.kubernetes.io/name: supertuxkart-server
    app.kubernetes.io/instance: supertuxkart-server
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: supertuxkart-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: supertuxkart
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/managed-by: pod-broker
